# state_estimation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lint.bash
examples/: README.md  data_io.cpp  data_io.h  plot_results.m  six_d_rates_example.cpp
examples/data/: imu_data.txt  odom_data.txt
include/state_estimation/definitions/: common_measurements.h  planar_2d_motion.h  planer_2d_motion.h  six_d_rates.h  six_dof_motion.h
include/state_estimation/filters/: ekf.h  ekf_vs.h  filter_base.h  filter_base.hpp  filter_model.h  kalman_filter.h  kalman_filter_vs.h  ukf.h  ukf_vs.h
include/state_estimation/measurement_models/: linear_measurement_model.h  measurement_model.h  nonlinear_measurement_model.h  planer_2d_imu.h  planer_2d_nh_odometry.h  six_d_rates_imu.h  six_d_rates_odom.h
include/state_estimation/system_models/: linear_system_model.h  nonlinear_system_model.h  planer_2d_state_propegation.h  six_d_rates.h  system_model.h
include/state_estimation/utilities/: angle_utilities.h  data_subset_utilities.h  imu_utilities.h  integration.h  logging.h  logging.hpp  math_utilities.h  plotting_utilities.h  transformation_utilities.h
src/definitions/: planar_2d_motion.cpp  planer_2d_motion.cpp  six_d_rates.cpp
src/filters/: ekf.cpp  ekf_vs.cpp  filter_base.cpp  filter_model.cpp  kalman_filter.cpp  kalman_filter_vs.cpp  ukf.cpp  ukf_vs.cpp
src/measurement_models/: linear_measurement_model.cpp  measurement_model.cpp  nonlinear_measurement_model.cpp  planer_2d_imu.cpp  planer_2d_nh_odometry.cpp  six_d_rates_imu.cpp  six_d_rates_odom.cpp
src/system_models/: linear_system_model.cpp  nonlinear_system_model.cpp  planer_2d_state_propegation.cpp  six_d_rates.cpp  system_model.cpp
src/utilities/: data_subset_utilities.cpp  imu_utilities.cpp  integration.cpp  math_utilities.cpp  plotting_utilities.cpp  transformation_utilities.cpp
test/: filter_test_utilities.h  model_test_utilities.h  test_angle_utilities.cpp  test_ekf.cpp  test_ekf_vs.cpp  test_filter_base.cpp  test_imu_utilities.cpp  test_integration.cpp  test_kalman_filter.cpp  test_kalman_filter_vs.cpp  test_planer_2d_imu_measurement_model.cpp  test_planer_2d_nh_odometry_measurement_model.cpp  test_planer_2d_state_propegation.cpp  test_six_d_rates_imu_meas_model.cpp  test_six_d_rates_odom_meas_model.cpp  test_six_d_rates_system_model.cpp  test_transformation_utilities.cpp  test_ukf.cpp  test_ukf_vs.cpp
test/utilities/: model_test_utilities.h
